[package]
name = "main"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-macros = "0.7"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
serde = "1.0"
ulid = {version = "1.0.0", features = [], default-features = false}
hex = "0.4"
x509-parser = "0.15.1"
ring = {git = "https://github.com/av1ctor/ring.git", branch = "b/0.16", features = ["wasm32_c"]}
